[back/misc] add some packages + a script to run linter from npm

--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "dev": "./scripts/start.sh NODE_ENV=development",
     "prod": "./scripts/start.sh NODE_ENV=development",
     "start": "npm run dev",
+    "lint": "eslint \"**/*.js\"",
     "test": "jest",
     "test:coverage": "jest --coverage --watchAll"
   },
@@ -26,7 +27,6 @@
     "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^3.0.6",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "esm": "^3.2.25",
@@ -34,6 +34,8 @@
     "jest": "^24.8.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
