--- a/api/.env
+++ b/api/.env
@@ -17,3 +17,8 @@ DATABASE_USER=dlaurent
 DATABASE_PASS=anAwesomeButInsecurePassword
 DATABASE_RECONNECT_INTERVAL=5000
 DATABASE_INIT=true
+
+# JSON WEB TOKEN
+JWT_SECRET=anAwesomeSecret
+JWT_DURATION=900
+JWT_DURATION_REFRESH=3600
