--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,16 +1,19 @@
 {
   "root": true,
   "env": {
-    "node": true,
+    "node": true
   },
   "extends": [
     "plugin:vue/essential",
-    "@vue/airbnb",
+    "@vue/airbnb"
   ],
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "import/no-cycle": {
+      "maxDepth": 2
+    }
   },
   "parserOptions": {
-    "parser": "babel-eslint",
+    "parser": "babel-eslint"
   }
 }
