--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 # API
-API_HOST=127.0.0.1
-API_PORT=3000
-API_URI=127.0.0.1:3000
+VUE_APP_API_HOST=http://localhost
+VUE_APP_API_PORT=3000
+VUE_APP_API_URI=http://localhost:3000
