--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "muse-ui": "^3.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
