--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.26",
     "muse-ui": "^3.0.2",
     "vue": "^2.6.10",
