--- a/api/.env
+++ b/api/.env
@@ -4,9 +4,9 @@ API_PORT=3000
 API_URI=127.0.0.1:3000
 
 # CLIENT
-CLIENT_HOST=127.0.0.1
+CLIENT_HOST=http://localhost
 CLIENT_PORT=8080
-CLIENT_URI=127.0.0.1:8080
+CLIENT_URI=http://localhost:8080
 
 # DATABASE
 DATABASE_HOST=127.0.0.1
