[back/feature] split .env files depending on node environment

--- a/api/config/.env.production
+++ b/api/config/.env.production
@@ -1,3 +1,5 @@
+# No domain is set do this configuration corresponds to development one
+
 # API
 API_HOST=127.0.0.1
 API_PORT=3000
@@ -12,13 +14,7 @@ CLIENT_URI=http://localhost:8080
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=27017
 DATABASE_URI=127.0.0.1:27017
-DATABASE_NAME=station-f
-DATABASE_USER=dlaurent
-DATABASE_PASS=anAwesomeButInsecurePassword
-DATABASE_RECONNECT_INTERVAL=5000
-DATABASE_INIT=true
-
-# JSON WEB TOKEN
-JWT_SECRET=anAwesomeSecret
-JWT_DURATION=900
-JWT_DURATION_REFRESH=3600
+DATABASE_NAME=station-f-prod
+DATABASE_USER=DfHDLyBs8Y_Gu3w_
+DATABASE_PASS=wqH78E@k?h8N%Hwx
+DATABASE_RECONNECT_INTERVAL=1000
