--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
+    "dotenv-flow": "^3.1.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "jest": "^24.8.0",
